--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +7,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.ImageView?>
@@ -16,14 +14,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<VBox fx:id="vbApp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -85,14 +82,14 @@
                      <tooltip>
                         <Tooltip text="%btn.tt.PlayPause" />
                      </tooltip></Button>
-                  <Button fx:id="btnReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActReplay" visible="false">
+                  <Button fx:id="btnReplay" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActReplay" prefWidth="0.0" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-replay" />
                      </graphic>
                      <tooltip>
                         <Tooltip text="%btn.tt.Replay" />
                      </tooltip></Button>
-                  <Button fx:id="btnUncode" alignment="CENTER" mnemonicParsing="false" onAction="#btnActUncode" visible="false">
+                  <Button fx:id="btnUncode" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncode" prefWidth="0.0" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncode" />
                      </graphic>
@@ -100,7 +97,7 @@
                         <Tooltip text="%btn.tt.Uncode" />
                      </tooltip>
                   </Button>
-                  <Button fx:id="btnUncodeReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActUncodeReplay" visible="false">
+                  <Button fx:id="btnUncodeReplay" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#btnActUncodeReplay" prefWidth="0.0" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncodeReplay" />
                      </graphic>
@@ -120,7 +117,7 @@
             </ToolBar>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="apMediaCtrls" disable="true">
+      <AnchorPane fx:id="apMediaCtrls" disable="true" prefHeight="77.0" prefWidth="571.0">
          <children>
             <GridPane fx:id="gpMediaPlayer" minHeight="58.0" minWidth="400.0" prefHeight="58.0" prefWidth="400.0" styleClass="gp-player" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
@@ -189,120 +186,5 @@
             <Insets bottom="12.0" />
          </padding>
       </AnchorPane>
-      <AnchorPane fx:id="pnCoding" prefHeight="480.0" prefWidth="640.0" visible="false">
-         <children>
-            <VBox fx:id="vbPnlMiscCoding" prefHeight="258.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <TitledPane fx:id="pnlTimeline" animated="false" collapsible="false" prefHeight="90.0" text="%pnl.title.timeline">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <SwingNode fx:id="snTimeline" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children></AnchorPane>
-                    </content>
-                  </TitledPane>
-                  <HBox alignment="CENTER_LEFT" prefHeight="30.0">
-                     <children>
-                        <Button fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" text="%btn.startCoding">
-                           <tooltip>
-                              <Tooltip text="%btn.tt.startCoding" />
-                           </tooltip></Button>
-                        <Label fx:id="lblCurMiscFile" text="">
-                           <padding>
-                              <Insets left="12.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <TitledPane fx:id="pnlPrevUtr" animated="false" collapsible="false" prefHeight="60.0" text="%pnl.title.prevUtr">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Label fx:id="lblPrevUtr" prefHeight="48.0" prefWidth="620.0" text="" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                    </content>
-                  </TitledPane>
-                  <TitledPane fx:id="pnlCurUtr" animated="false" collapsible="false" prefHeight="60.0" text="%pnl.title.currUtr">
-                    <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="620.0" spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Label text="%lbl.enumeration" />
-                                    <Label fx:id="lblCurUtrEnum" text="">
-                                       <HBox.margin>
-                                          <Insets />
-                                       </HBox.margin>
-                                    </Label>
-                                    <Label text="%lbl.miscCode">
-                                       <HBox.margin>
-                                          <Insets left="20.0" />
-                                       </HBox.margin>
-                                    </Label>
-                                    <Label fx:id="lblCurUtrCode" layoutX="94.0" layoutY="10.0" text="" />
-                                    <Label text="%lbl.miscStartTime">
-                                       <HBox.margin>
-                                          <Insets left="20.0" />
-                                       </HBox.margin>
-                                    </Label>
-                                    <Label fx:id="lblCurUtrStartTime" text="" />
-                                    <Label text="%lbl.miscEndTime">
-                                       <HBox.margin>
-                                          <Insets left="20.0" />
-                                       </HBox.margin>
-                                    </Label>
-                                    <Label fx:id="lblCurUtrEndTime" layoutX="94.0" layoutY="10.0" text="" />
-                                 </children>
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets></HBox>
-                           </children>
-                        </AnchorPane>
-                    </content>
-                     <VBox.margin>
-                        <Insets bottom="2.0" />
-                     </VBox.margin>
-                  </TitledPane>
-                  <HBox VBox.vgrow="ALWAYS">
-                     <children>
-                        <TitledPane fx:id="titlePnlCodesLeft" animated="false" collapsible="false" text="" HBox.hgrow="ALWAYS">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane fx:id="pnlCodesLeft" hgap="4.0" prefHeight="180.0" prefWidth="307.0" vgap="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                           <HBox.margin>
-                              <Insets right="2.0" />
-                           </HBox.margin>
-                        </TitledPane>
-                        <TitledPane fx:id="titlePnlCodesRight" animated="false" collapsible="false" text="" HBox.hgrow="ALWAYS">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane fx:id="pnlCodesRight" hgap="4.0" prefHeight="180.0" prefWidth="307.0" vgap="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                           <HBox.margin>
-                              <Insets left="2.0" />
-                           </HBox.margin>
-                        </TitledPane>
-                     </children>
-                  </HBox>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-            </VBox>
-         </children></AnchorPane>
   </children>
 </VBox>
